# Linux

./: .gitignore  CMakeLists.txt  Makefile  README.md  back  build.sh  define.h  fs_base.h  init.sh  main.c  run_client.sh  run_server.sh  start.sh
CMake/: CMakeLists.txt
CMake/A/: CMakeLists.txt  lib.h
CMake/B/: main.cpp  main.h
CMake/C/: preparing.py
CMake/doc/: Doxyfile
File System/: README.md
File System/fs/: fs_store_functions.h  server.c
client/: CMakeLists.txt  client.c
daemon/: CMakeLists.txt  demonize.c  demonize.h
fs/: CMakeLists.txt  base_structures.h  define.h  init.sh  initialize.c  operations.h  server.c  start.sh
modules/: lkm_example.c
modules2/: lkm_example.c
src/: base_structures.h  blocks.h  define.h  fs_base.h  initialize.c  main.c  operations.h
